# Hydra-ROS

./: .gitignore  README.md
hydra_msgs/: CMakeLists.txt  package.xml
hydra_msgs/msg/: AABB.msg  HydraVisionPacket.msg  InstanceViewHeader.msg  Mask.msg  Masks.msg  ObjectLayerInfo.msg  ObjectNodeInfo.msg
hydra_ros/: CMakeLists.txt  package.xml
hydra_ros/include/hydra_ros/: hydra_ros_pipeline.h
hydra_ros/include/hydra_ros/input/: image_receiver.h
hydra_ros/include/hydra_ros/utils/: dsg_streaming_interface.h
hydra_ros/launch/: hydra.launch
hydra_ros/src/: hydra_ros_pipeline.cpp
hydra_ros/src/input/: image_receiver.cpp
hydra_ros/src/nodes/: hydra_node.cpp
hydra_ros/src/utils/: dsg_streaming_interface.cpp
